project report ready
Co-Authored-By: Amirhossein Asadian <94138466+asadian98@users.noreply.github.com>

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -923,3 +923,72 @@
   year     = 2019,
   language = {en}
 }
+
+@article{SigDepNoise,
+  title    = {Signal-dependent noise determines motor planning},
+  author   = {Harris, Christopher M and Wolpert, Daniel M},
+  abstract = {When we make saccadic eye movements or goal-directed arm
+              movements, there is an infinite number of possible trajectories
+              that the eye or arm could take to reach the target. However,
+              humans show highly stereotyped trajectories in which velocity
+              profiles of both the eye and hand are smooth and symmetric for
+              brief movements. Here we present a unifying theory of eye and arm
+              movements based on the single physiological assumption that the
+              neural control signals are corrupted by noise whose variance
+              increases with the size of the control signal. We propose that in
+              the presence of such signal-dependent noise, the shape of a
+              trajectory is selected to minimize the variance of the final eye
+              or arm position. This minimum-variance theory accurately predicts
+              the trajectories of both saccades and arm movements and the
+              speed-accuracy trade-off described by Fitt's law. These profiles
+              are robust to changes in the dynamics of the eye or arm, as found
+              empirically. Moreover, the relation between path curvature and
+              hand velocity during drawing movements reproduces the empirical
+              'two-thirds power law. This theory provides a simple and powerful
+              unifying perspective for both eye and arm movement control.},
+  journal  = {Nature},
+  volume   = 394,
+  number   = 6695,
+  pages    = {780--784},
+  month    = aug,
+  year     = 1998,
+  language = {en}
+}
+
+ @misc{idataist,
+  title   = {Continuous Control With Deep Deterministic Policy Gradient},
+  url     = {https://github.com/iDataist/Continuous-Control-with-Deep-Deterministic-Policy-Gradient},
+  journal = {GitHub},
+  month   = jun,
+  year    = 2021,
+  author  = {iDataist}
+}
+
+@article{VarLearning,
+  title    = {Temporal structure of motor variability is dynamically regulated and predicts motor learning ability},
+  author   = {Wu, Howard G and Miyamoto, Yohsuke R and Gonzalez Castro, Luis Nicolas and {\"O}lveczky, Bence P and Smith, Maurice A},
+  abstract = {Individual differences in motor learning ability are widely
+              acknowledged, yet little is known about the factors that underlie
+              them. Here we explore whether movement-to-movement variability in
+              motor output, a ubiquitous if often unwanted characteristic of
+              motor performance, predicts motor learning ability. Surprisingly,
+              we found that higher levels of task-relevant motor variability
+              predicted faster learning both across individuals and across
+              tasks in two different paradigms, one relying on reward-based
+              learning to shape specific arm movement trajectories and the
+              other relying on error-based learning to adapt movements in novel
+              physical environments. We proceeded to show that training can
+              reshape the temporal structure of motor variability, aligning it
+              with the trained task to improve learning. These results provide
+              experimental support for the importance of action exploration, a
+              key idea from reinforcement learning theory, showing that motor
+              variability facilitates motor learning in humans and that our
+              nervous systems actively regulate it to improve learning.},
+  journal  = {Nat. Neurosci.},
+  volume   = 17,
+  number   = 2,
+  pages    = {312--321},
+  month    = feb,
+  year     = 2014,
+  language = {en}
+}
